syntax = "proto3";

package riskcontrol;

option go_package = "/proto";

message RiskCheckRequest {
    string transaction_id = 1;
    string account_from = 2;
    string account_to = 3;
    int32 account_type = 4;
    double amount = 5;
    int32 transaction_type = 6;
}
message RiskCheckResponse {
    bool passed = 1;
    int32 reason = 2;
}

// 风控服务
service RiskControlService {
    // 检查交易风险
    rpc CheckTransaction (RiskCheckRequest) returns (RiskCheckResponse);
}